# dada-dataset-creator

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  codex_service.py  job_runner.py  jobs.py  lora_utils.py  main.py  modal_qwen_edit.py  models.py  storage.py  toml_export.py  training_runner.py  training_service.py  utils.py
app/static/: dataset.js  styles.css
app/templates/: base.html  curator.html  dataset.html  index.html
tests/: test_app.py  test_codex_service.py  test_job_runner.py  test_jobs.py  test_storage.py  test_training_runner.py  test_training_service.py  test_utils.py
