[project]
name = "dada-dataset-creator"
version = "0.1.0"
description = "Local FastAPI app for building Anima LoRA datasets."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "tomli-w>=1.1.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]
codex = [
    "openai-codex-app-server-sdk @ git+https://github.com/openai/codex.git#subdirectory=sdk/python",
]
modal = [
    "modal>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
